--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,9 @@
   <meta name="google-signin-client_id" content="1008969614103-vkc5svkrejls0h6pg8g3mfoect62d418.apps.googleusercontent.com">
 </head>
 <body>
+
+  <!-- <img src="http://localhost:3000/image/users/1611286400734juliuxxPhoto.jpg?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ1c2VyIjp7InJvbGUiOiJVU0VSIiwic3RhdHVzIjpmYWxzZSwiZ29vZ2xlIjpmYWxzZSwiX2lkIjoiNWZmZjczYWJmOWY3M2EzM2E4OTA0YjUzIiwibmFtZSI6IlRlc3QgMTkiLCJlbWFpbCI6InRlc3QxOUBnbWFpbC5jb20iLCJfX3YiOjB9LCJpYXQiOjE2MTEzNjU2MzcsImV4cCI6MTYxMzk1NzYzN30.3-V0yZqJdUD6HoL3RDgPNawntnjxLFVucNzusiOw3Ek" alt=""> -->
+
   <div class="g-signin2" data-onsuccess="onSignIn"></div>
   <a href="#" onclick="signOut();">Sign out</a>
   <script>
